Add core dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Language: en-GB
+Imports:
+    dust,
+    odin
 Suggests:
     testthat
