--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Language: en-GB
+URL: https://github.com/mrc-ide/odin.dust
+BugReports: https://github.com/mrc-ide/odin.dust/issues
 Imports:
     dust,
     odin
