Start moving to cpp11

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
 r_packages:
   - covr
 r_github_packages:
-  - mrc-ide/dust
+  - r-lib/cpp11
+  - r-lib/pkgbuild@cpp11
+  - mrc-ide/dust@i22-no-rcpp
 after_success:
   - Rscript -e 'covr::codecov(quiet = FALSE)'
