--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,10 @@ URL: https://github.com/mrc-ide/odin.dust
 BugReports: https://github.com/mrc-ide/odin.dust/issues
 Imports:
     R6,
-    dust (>= 0.0.6),
+    dust (>= 0.2.0),
     odin
 Suggests:
-    Rcpp,
+    cpp11,
     dde,
     mockery,
     pkgload,
