--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.0.9
+Version: 0.0.10
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("John", "Lees", role = "aut"),
@@ -25,9 +25,14 @@ Suggests:
     cpp11,
     decor,
     dde,
+    fs,
+    knitr,
     mockery,
     pkgload,
+    rmarkdown,
+    socialmixr,
     testthat,
     tibble,
-    vctrs
+    vctrs,
 RoxygenNote: 7.1.0
+VignetteBuilder: knitr
