--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,21 +18,16 @@ URL: https://github.com/mrc-ide/odin.dust
 BugReports: https://github.com/mrc-ide/odin.dust/issues
 Imports:
     R6,
-    dust (>= 0.4.1),
-    odin
-Suggests:
     brio,
     cpp11,
     decor,
-    dde,
-    fs,
-    knitr,
-    mockery,
-    pkgload,
-    rmarkdown,
-    socialmixr,
-    testthat,
+    dust (>= 0.4.1),
+    odin,
     tibble,
     vctrs
+Suggests:
+    dde,
+    mockery,
+    pkgload,
+    testthat
 RoxygenNote: 7.1.0
-VignetteBuilder: knitr
