--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.0.10
+Version: 0.1.0
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("John", "Lees", role = "aut"),
@@ -21,7 +21,7 @@ Imports:
     brio,
     cpp11,
     decor,
-    dust (>= 0.4.13),
+    dust (>= 0.5.0),
     odin,
     tibble,
     vctrs
@@ -36,4 +36,4 @@ Suggests:
 RoxygenNote: 7.1.0
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust
+    mrc-ide/dust@i106-interleave-rng
