--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.1.10
+Version: 0.1.11
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("John", "Lees", role = "aut"),
@@ -22,7 +22,7 @@ Imports:
     cpp11,
     decor,
     dust (>= 0.6.1),
-    odin (>= 1.1.5),
+    odin (>= 1.1.7),
     tibble,
     vctrs
 Suggests:
@@ -37,4 +37,4 @@ RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Remotes:
     mrc-ide/dust@i129-compile-compare,
-    mrc-ide/odin
+    mrc-ide/odin@mrc-2117
