--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,5 +37,5 @@ Suggests:
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust@i129-compile-compare,
-    mrc-ide/odin@mrc-2117
+    mrc-ide/dust,
+    mrc-ide/odin
