Point at master

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,5 +36,5 @@ Suggests:
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust@cuda-filter,
+    mrc-ide/dust,
     mrc-ide/odin
