--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,5 +37,5 @@ RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust@develop,
+    mrc-ide/dust,
     mrc-ide/odin
