--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.2.16
+Version: 0.2.17
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("John", "Lees", role = "aut"),
@@ -22,7 +22,7 @@ Imports:
     cpp11,
     decor,
     dust (>= 0.11.14),
-    mode,
+    mode (>= 0.1.1),
     odin (>= 1.3.5),
     tibble,
     vctrs
@@ -39,5 +39,5 @@ Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Remotes:
     mrc-ide/dust,
-    mrc-ide/mode,
-    mrc-ide/odin
+    mrc-ide/mode@mrc-3308,
+    mrc-ide/odin@mrc-3305
