--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.2.23
+Version: 0.2.24
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
+             person("Alex", "Hill", role = "aut"),
              person("John", "Lees", role = "aut"),
              person("Imperial College of Science, Technology and Medicine",
                     role = "cph"))
@@ -21,7 +22,7 @@ Imports:
     brio,
     cpp11,
     decor,
-    dust (>= 0.11.30),
+    dust (>= 0.11.35),
     mode (>= 0.1.6),
     odin (>= 1.3.5),
     tibble,
