--- a/.github/workflows/make-release.yaml
+++ b/.github/workflows/make-release.yaml
@@ -72,12 +72,12 @@ jobs:
           path: build
 
   create-release:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     needs: build-binaries
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Extract version
         run: |
@@ -95,9 +95,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ env.PACKAGE_VERSION }}
           release_name: Release ${{ env.PACKAGE_NAME }} ${{ env.PACKAGE_VERSION }}
