--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: odin.dust
 Title: Compile Odin to Dust
-Version: 0.2.25
+Version: 0.2.26
 Authors@R: c(person("Rich", "FitzJohn", role = c("aut", "cre"),
                     email = "rich.fitzjohn@gmail.com"),
              person("Alex", "Hill", role = "aut"),
@@ -22,7 +22,7 @@ Imports:
     brio,
     cpp11,
     decor,
-    dust (>= 0.11.35),
+    dust (>= 0.12.0),
     mode (>= 0.1.6),
     odin (>= 1.3.5),
     tibble,
@@ -39,6 +39,6 @@ RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust,
+    mrc-ide/dust@mrc-3502,
     mrc-ide/mode,
     mrc-ide/odin
