Try to smooth things over with pak

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,5 +40,5 @@ Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Remotes:
     mrc-ide/dust@mrc-3502,
-    mrc-ide/mode,
+    mrc-ide/mode@mrc-3773,
     mrc-ide/odin
