--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     brio,
     cpp11,
     decor,
-    dust (>= 0.14.7),
+    dust (>= 0.14.11),
     odin (>= 1.5.0),
     tibble,
     vctrs
@@ -37,5 +37,5 @@ RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Remotes:
-    mrc-ide/dust,
+    mrc-ide/dust@mrc-4581,
     mrc-ide/odin
